...
    }
    
    func setIsLiked(_ isLiked: Bool){
        removeAnimations()
        if isLiked {
            likeButton.setImage(UIImage(named: "Active Like"), for: .normal)
            likeButton.accessibilityIdentifier = "LikeButtonOn"
        } else {
            likeButton.setImage(UIImage(named: "No Active Like"), for: .normal)
            likeButton.accessibilityIdentifier = "LikeButtonOff"
        }
            
    }
    
    func removeAnimations(){
        likeButton.layer.removeAllAnimations()
...
