...
        let actionLogout = UIAlertAction(
            title: configuration.titleYesButton,
            style: .default) {[weak view] _ in
                view?.logout()
            }
        
        actionLogout.accessibilityIdentifier = "AlertLogoutButton"
        alert.addAction(actionLogout)
        alert.addAction(actionStay)
        
        alert.preferredAction = actionStay
        
        
...
