...
        
        loginButton.setTitle("Войти", for: .normal)
        loginButton.setTitleColor(.ypBlack, for: .normal)
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        loginButton.layer.masksToBounds = true
        loginButton.layer.cornerRadius = 16
        loginButton.accessibilityIdentifier = "Authenticate"
        
        loginButton.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
       
        return loginButton
    }()
    
...
