...
        return progressView
    }()
    
    
    private lazy var webView: WKWebView = {
        let webView = WKWebView()
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    weak var delegate: WebViewViewControllerDelegate?
    
    override func loadView() {
        super.loadView()
...
